usrv/service.yml
apiVersion: v1
kind: Service
metadata:
  name: www
spec:
  type: ClusterIP
  selector:
    app: www
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

## type: ClusterIP can be replaced by
##       LoadBalancer
